<resources>
    <string name="app_name">Final Project</string>

    <string name="loading_error">Unable to fetch cocktail data.  Error message: %1$s</string>
    <string name="image_filler">Cocktail Image</string>
    <string name="instructions_header">Instructions</string>
    <string name="ingredients_header">Ingredients</string>
    <string name="ingredient">%1$s: %2$s</string>

    <string name="label_cocktail_list">Cocktails</string>
    <string name="label_cocktail_details">Cocktail Details</string>
    <string name="label_settings">Settings</string>
    <string name="label_random_cocktail">Random Cocktail</string>
    <string name="action_shuffle">Shuffle</string>

    <string name="pref_category_entry_beer">Beer</string>
    <string name="pref_category_entry_cocktail">Cocktail</string>
    <string name="pref_category_entry_cocoa">Cocoa</string>
    <string name="pref_category_entry_coffee_tea">Coffee/Tea</string>
    <string name="pref_category_entry_homemade_liqueur">Homemade Liqueur</string>
    <string name="pref_category_entry_ordinary">Ordinary Drink</string>
    <string name="pref_category_entry_other">Other</string>
    <string name="pref_category_entry_party">Punch/Party Drink</string>
    <string name="pref_category_entry_shake">Shake</string>
    <string name="pref_category_entry_shot">Shot</string>
    <string name="pref_category_entry_soft_drink">Soft Drink</string>

    <string name="pref_category_value_beer" translatable="false">Beer</string>
    <string name="pref_category_value_cocktail" translatable="false">Cocktail</string>
    <string name="pref_category_value_cocoa" translatable="false">Cocoa</string>
    <string name="pref_category_value_coffee_tea" translatable="false">Coffee_/_Tea</string>
    <string name="pref_category_value_homemade_liqueur" translatable="false">Homemade_Liqueur</string>
    <string name="pref_category_value_ordinary" translatable="false">Ordinary_Drink</string>
    <string name="pref_category_value_other" translatable="false">Other_/_Unknown</string>
    <string name="pref_category_value_party" translatable="false">Punch_/_Party_Drink</string>
    <string name="pref_category_value_shake" translatable="false">Shake</string>
    <string name="pref_category_value_shot" translatable="false">Shot</string>
    <string name="pref_category_value_soft_drink" translatable="false">Soft_Drink</string>

    <string name="pref_category_default_value">@string/pref_category_value_cocktail</string>
    <string name="pref_category_key">category</string>
    <string name="pref_category_title">Category</string>

    <string name="forecast_date">%1$tb %1$te</string>
    <string name="forecast_time">%1$tl:%1$tM %1$tp</string>
    <string name="forecast_temp">%1$d°</string>
    <string name="forecast_pop">%1$d%%</string>
    <string name="forecast_clouds">%1$d%%</string>
    <string name="forecast_wind">%1$d%2$s</string>
    <string name="forecast_date_time">%1$tb %1$te, %1$tl:%1$tM %1$tp</string>

    <string name="label_current_weather">Current Weather</string>
    <string name="label_five_day_forecast">Five-Day Forecast</string>
    <string name="label_saved_cities">Saved Cities</string>

    <string name="action_five_day_forecast">Five-Day Forecast</string>
    <string name="action_current_weather">Current Weather</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>

    <string name="share_weather_text">Current weather for %1$s: %2$s, %3$s</string>

    <!--
      - Preferences strings
      -->
    <string name="pref_category_location">Forecast Location</string>

    <string name="pref_lat_title">Latitude</string>
    <string name="pref_lat_key" translatable="false">lat</string>

    <string name="pref_lon_title">Longitude</string>
    <string name="pref_lon_key" translatable="false">lon</string>

    <string name="pref_units_title">Weather Units</string>
    <string name="pref_units_key" translatable="false">units</string>

    <string name="pref_units_entry_imperial">Imperial (e.g. °F)</string>
    <string name="pref_units_entry_metric">Metric (e.g. °C)</string>
    <string name="pref_units_entry_standard">Standard (e.g. °K)</string>

    <string name="pref_units_value_imperial" translatable="false">imperial</string>
    <string name="pref_units_value_metric" translatable="false">metric</string>
    <string name="pref_units_value_standard" translatable="false">standard</string>

    <string name="pref_units_default_value">@string/pref_units_value_imperial</string>
</resources>