<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/random_cocktail"
        android:title="@string/label_random_cocktail" />

    <item
        android:id="@+id/category_cocktail_list"
        android:title="@string/label_cocktail_list" />

    <item
        android:id="@+id/current_weather"
        android:title="@string/action_current_weather"
        android:icon="@drawable/ic_action_cloud"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/five_day_forecast"
        android:title="@string/action_five_day_forecast"
        android:icon="@drawable/ic_action_five_day_forecast"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/saved_cities"
        android:title="@string/label_saved_cities">
        <menu></menu>
    </item>

</menu>