<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/category_cocktail_list">

    <fragment
        android:id="@+id/random_cocktail"
        android:label="@string/label_random_cocktail"
        android:name="edu.oregonstate.cs492.finalProject.ui.RandomCocktailFragment" />

    <fragment
        android:id="@+id/category_cocktail_list"
        android:label="@string/label_cocktail_list"
        android:name="edu.oregonstate.cs492.finalProject.ui.CocktailListFragment">
        <action
            android:id="@+id/navigate_to_cocktail_details"
            app:destination="@id/cocktail_details"/>
        <action
            android:id="@+id/navigate_to_settings"
            app:destination="@id/settings" />
    </fragment>

    <fragment
        android:id="@+id/cocktail_details"
        android:label="@string/label_cocktail_details"
        android:name="edu.oregonstate.cs492.finalProject.ui.CocktailDetailsFragment">
        <argument
            android:name="cocktail"
            app:argType="edu.oregonstate.cs492.finalProject.data.ShortCocktail" />
    </fragment>

    <fragment
        android:id="@+id/settings"
        android:label="@string/label_settings"
        android:name="edu.oregonstate.cs492.finalProject.ui.SettingsFragment">
    </fragment>

</navigation>